--- a/myproject/app/templates/auth/register.html
+++ b/myproject/app/templates/auth/register.html
@@ -1,4 +1,5 @@
-{% extends 'layout.html' %} {%block body%} {% from "includes/_formhelpers.html"
+{% extends 'layout.html' %} {%block body%} 
+{% from "includes/_formhelpers.html"
 import render_field %}
 
 <div class="card px-1 pt-3 my-5 text-monospace shadow w-100 mx-auto bg-dark text-light vh-50" style="min-width:30vh;" >
